Refactor package from com.example.onemrc to com.recnos.onemrc
Renamed all Java source files and updated package declarations from com.example.onemrc to com.recnos.onemrc for consistency. Updated references in README, application.yml, and test client. Refactored DTOs to use Lombok annotations for boilerplate reduction and improved test client concurrency handling.